--- a/dev-docs/docs/@excalidraw/excalidraw/api/constants.mdx
+++ b/dev-docs/docs/@excalidraw/excalidraw/api/constants.mdx
@@ -12,11 +12,11 @@ import { FONT_FAMILY } from "@excalidraw/excalidraw";
 
 | Font Family | Description            |
 | ----------- | ---------------------- |
-| `Virgil`    | The `handwritten` font |
-| `Helvetica` | The `Normal` Font      |
+| `HandWritingFont`    | The `handwritten` font |
+| `NormalFont` | The `Normal` Font      |
 | `Cascadia`  | The `Code` Font        |
 
-Defaults to `FONT_FAMILY.Virgil` unless passed in `initialData.appState.currentItemFontFamily`.
+Defaults to `FONT_FAMILY.HandWritingFont` unless passed in `initialData.appState.currentItemFontFamily`.
 
 ### THEME
 
